--- a/index.html
+++ b/index.html
@@ -96,12 +96,16 @@ Oct.2014
                               </div>
                               <div class="clearfix"></div>
                             </div>
-                            <p style="margin-left: 28vw; margin-bottom:
-                                      6px"> <font size="4">I'm
-                                an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC</a>
-                                project funded Ph.D student working
-                                with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
-                                  Ryan</a> <!-- on the project -->
+                            <p style="margin-left: 28vw;
+                                      margin-bottom:
+                                      6px"> <font size="4"> I'm
+                                      an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">
+                                      EPSRC
+                                </a>
+                                      project funded Ph.D student
+                                      working
+                                      with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
+                                      Ryan</a> <!-- on the project -->
                                 <!-- "<a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/H005501/1"> -->
                                 <!-- Analysing Security and Privacy Properties</a>" -->
                                 in
@@ -372,15 +376,21 @@ Oct.2014
                               </ul>
                       <br>
 
-	                    <li><b>Master Thesis:</b><br>
+	                    <li><b>Thesis:</b><br>
 	                      <ul type="circle">
-                          <li>Jiangshan
-                          Yu. <a href="doc/paper/Thesis.pdf">"Remote User
-                          Authentication in Distributed Networks and
-                          Systems"</a>. <i>Master of Computer Science
-                          (Research)</i>, School of Computer Science and
-                          Software Engineering, University of Wollongong,
-                          2012.</li>
+                                <li>Jiangshan
+                          Yu. <a href="doc/paper/Thesis.pdf">"Remote
+                          User Authentication in Distributed Networks
+                          and Systems"</a>. <i>Master of Computer
+                          Science (Research)</i>, School of Computer
+                          Science and Software Engineering, University
+                                  of Wollongong, Australia, 2012.</li>
+                                <li>Jiangshan
+                                  Yu. <a href="http://etheses.bham.ac.uk/6915/">"Mitigating
+                                  private key compromise"</a>. <i> PhD
+                                  </i>,
+                                  School of Computer Science, University of
+                                  Birmingham, UK, 2016.</li>
                         </ul>
                       </li>
 
