--- a/index.html
+++ b/index.html
@@ -360,7 +360,12 @@ Oct.2014
                           Ryan, <a href="doc/paper/SPW-2015.pdf">
                           "Device attacker models: fact and
                           fiction"</a>, <i>Security Protocols
-                          XXIII</i>, pp. 158-167, 2015.
+                              XXIII</i>, pp. 158-167, 2015.</li>
+                          <li>
+                        Jiangshan Yu and Mark Ryan. "Evaluating public
+                        key infrastructures", <i>Software Architecture
+                        for Big Data and the Cloud</i>, 2016. (Book Chapter)
+                          </li>
                         </ul>
                       </li>
 
@@ -409,11 +414,6 @@ Oct.2014
                         </li>
 
                          <li>
-                        Jiangshan Yu and Mark Ryan. "Evaluating web
-                        PKIs", 2015.
-                        </li>
-
-                         <li>
                            Jiangshan Yu, Guilin Wang, and Yi
                            Mu. "Efficient and Provably Secure Single
                            Sign-on Schemes in Distributed Systems and
@@ -425,7 +425,9 @@ Oct.2014
                             storage (Or, how to store a long-term
                             secret online)", 2016.
                         </li>
-
+                          <!-- Kevin, Cas, JS, and Mark, Detecting the
+                         Misuse of Secrets:\\Foundations and Protocols
+                         -->
                           </ul>
                       </li>
                       <br>
