--- a/index.html
+++ b/index.html
@@ -98,53 +98,56 @@ Oct.2014
                             </div>
                             <p style="margin-left: 28vw;
                                       margin-bottom:
-                                      6px"> <font size="4"> I'm
-                                      an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">
-                                      EPSRC
+                                      6px"> <font size="4"> I am a
+                                      research fellow working
+                                      with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
+                                      Prof. Paulo Esteves-Verissimo
                                 </a>
-                                      project funded Ph.D student
-                                      working
-                                      with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
-                                      Ryan</a> <!-- on the project -->
-                                <!-- "<a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/H005501/1"> -->
-                                <!-- Analysing Security and Privacy Properties</a>" -->
-                                in
+                                  at <a href="http://wwwen.uni.lu/snt/research/critix">
+                                  CritiX
+                                </a>, <a href="http://wwwen.uni.lu/snt">
+                                  SnT
+                                </a>, <a href="http://wwwen.uni.lu">
+                                  University of Luxembourg
+                                </a>. I am also an honorary research
+                                fellow working
+                                with <a href="http://www.cs.bham.ac.uk/~mdr/">
+                                Prof. Mark Ryan</a> in
                                 the <a href="http://www.cs.bham.ac.uk">School
-                                  of Computer
-                                  Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                                  of Birmingham</a>, UK.  <!-- I'm also a director -->
-                                <!-- of CloudTomo, a startup aiming to help users -->
-                                <!-- to secure their email and cloud
-                                     storage. --> I received my MSc
-                                     and MPhil degree in computer
-                                     science (crypto and information
-                                     security, under the supervision
-                                     of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
-                                     Wang</a>
-                                     and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
-                                     Mu</a>) respectively in 2011 and
-                                     2012, from
-                                     the <a href="http://www.uow.edu.au/">University
-                                     of Wollongong</a>, Australia.
-                                <br><br>
+                                of Computer
+                                Science</a>, <a href="http://www.birmingham.ac.uk/">University
+                                of Birmingham</a>, UK, where I
+                                received my PhD in computer
+                                science. <!-- I received my MSc -->
+                                <!-- and MPhil (equivalent to Master by -->
+                                <!-- research) degree in computer science -->
+                                <!-- (crypto and information security, -->
+                                <!-- under the supervision -->
+                                <!-- of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin -->
+                                <!-- Wang</a> -->
+                                <!-- and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi -->
+                                <!-- Mu</a>) respectively in 2011 and 2012, -->
+                                <!-- from -->
+                                <!-- the <a href="http://www.uow.edu.au/">University -->
+                                <!-- of Wollongong</a>, Australia. -->
+                                <!-- <br><br> -->
 
-                                My research interests are in cyber security
-                                and user privacy. In particular, the focus of
-                                my research has been on applied crypto, secure
-                                authentication, key management, public key
-                                certificate security, email security, secure
-                                cloud storage, and security proof (both
-                                game-based security proof and formal
-                                machine-checked proof).
-                                <br><br>
-                                Currently, I’m working
-                                on the Internet of Things security including
-                                device authentication, secure communication
-                                and data processing, secure IoT payment
-                                system, user privacy in the supply chain
-                                system, and mitigating damage caused by
-                                attacks (e.g. device impersonation attack and
-                                device break-ins).
+                                I am interested in designing secure
+                                systems. In particular, the focus of
+                                my research has been on applied
+                                crypto, secure authentication, key
+                                management, public key certificate
+                                security, email security, secure cloud
+                                storage, and security verification.
+                                <br><br> Currently, I’m working on the
+                                public-ledger-based applications
+                                (e.g. crypto-currency and blockchain
+                                technology), IoT security (e.g. key
+                                management, device authentication, and
+                                secure communication), and post
+                                compromise security (e.g. detecting
+                                the compromise of secret keys and
+                                devices).
                                 <br><br>
                               </font>
                             </p>
@@ -364,7 +367,8 @@ Oct.2014
                           <li>
                         Jiangshan Yu and Mark Ryan. "Evaluating public
                         key infrastructures", <i>Software Architecture
-                        for Big Data and the Cloud</i>, 2016. (Book Chapter)
+                        for Big Data and the Cloud</i>, 2016. (To
+                        appear as a book chapter)
                           </li>
                         </ul>
                       </li>
@@ -389,13 +393,19 @@ Oct.2014
                           and Systems"</a>. <i>Master of Computer
                           Science (Research)</i>, School of Computer
                           Science and Software Engineering, University
-                                  of Wollongong, Australia, 2012.</li>
+                          of Wollongong, Australia, 2012. (Supervised
+                          by <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
+                          Wang</a>
+                          and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
+                          Mu</a>)</li>
                                 <li>Jiangshan
                                   Yu. <a href="http://etheses.bham.ac.uk/6915/">"Mitigating
                                   private key compromise"</a>. <i> PhD
-                                  </i>,
-                                  School of Computer Science, University of
-                                  Birmingham, UK, 2016.</li>
+                                  </i>, School of Computer Science,
+                                  University of Birmingham, UK,
+                                  2016. (Supervised
+                                  by <a href="http://www.cs.bham.ac.uk/~mdr/">
+                                  Prof. Mark Ryan</a>)</li>
                         </ul>
                       </li>
 
@@ -424,16 +434,15 @@ Oct.2014
                             self-healing scheme for distributed
                             storage (Or, how to store a long-term
                             secret online)", 2016.
-                        </li>
-                          <!-- Kevin, Cas, JS, and Mark, Detecting the
-                         Misuse of Secrets:\\Foundations and Protocols
-                         -->
-                          </ul>
+                          </li>
+                              </ul>
                       </li>
+                    </ul>
+
+                          <!-- Kevin, Cas, JS, and Mark, Detecting the
+                         Misuse of Secrets:\\Foundations and Protocols-->
                       <br>
 
-                    </ul>
-                    
                     <br>
                     <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b> Professional
@@ -516,11 +525,11 @@ Oct.2014
                       <li><b>Talk:</b><br>
 
                         <ul type="circle">
-                          <li>Jiangshan Yu. 'A Generic Framework for
-                          Three-Factor Authentication'. University of
-                          Birmingham, UK, 2013.</li>
+                          <li>'A Generic Framework for Three-Factor
+                          Authentication'. University of Birmingham,
+                          UK, 2013.</li>
 
-                          <li>Jiangshan Yu.  'DTKI: a new formalized
+                          <li>'DTKI: a new formalized
                             PKI with verifiable trusted parties'. <br>
                             Presented at:
                             <ul>
@@ -547,18 +556,18 @@ Oct.2014
                             <li> ETH Zurich, Switzerland, 2016</li>
                             </ul>
                           </li>
-                          <li>Jiangshan Yu, 'Key usage detection',
-                            University of Birmingham, UK, 2014.</li>
-                           <li>Jiangshan Yu. 'Device attacker models:
+                          <li>'Key usage detection', University of
+                            Birmingham, UK, 2014.</li>
+                           <li>'Device attacker models:
                           fact and fiction'. Presented at the
                           Twenty-third International Workshop on
                           Security Protocols, Cambridge University,
                           Cambridge, UK, 2015.</li>
-                          <li>Jiangshan Yu. 'Security in periodically
+                          <li>'Security in periodically
                           compromised cloud storage'. Presented at
                           CryptoForma, University of Strathclyde,
-                          Glasgow, UK, 2015.</li>
-
+                            Glasgow, UK, 2015.</li>
+                          <li> 'Post compromise security'. Presented at University of Luxembourg, Luxembourg, 2016.</li>
                           <br>
                           <!-- <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf"> -->
                           <!-- 'Key Usage Detection</a>. [CompSecSem] Security -->
