--- a/index.html
+++ b/index.html
@@ -804,8 +804,9 @@ Oct.2014
                                         margin-bottom:
                                         6px"> <font size="4">I'm a
                                         director of CloudTomo, a
-                                        company providing security
-                                        solutions for email and cloud
+                                        university spin-out company
+                                        providing security solutions
+                                        for email and cloud
                                         storage. Please contact me for
                                         more detail. </p>
                               <br>
