--- a/index.html
+++ b/index.html
@@ -317,33 +317,37 @@ Oct.2014
 	                    <li><b>Journal:</b><br>
                         <ul type="circle">
                           <li>Guilin Wang, Jiangshan Yu, Qi
-                          Xie. <a href="doc/paper/TII-2013.pdf">"Security
+                          Xie. <br><a href="doc/paper/TII-2013.pdf"><b>"Security
                           Analysis of A Single Sign-On Mechanism for Distributed
-                          Computer Networks"</a>. <i>IEEE Transactions on
-                          Industrial Informatics</i> (impact factor = 8.785,
-                          h5-index = 46), Vol.9, No.1, pp.294-302,
-                          Feb. 2013. DOI: 10.1109/TII.2012.221587 </li>
+                          Computer Networks"</a></b>.<br> <i>IEEE Transactions on
+                          Industrial Informatics</i> (IF = 8.785,
+                          h5-index = 46), <br>Vol.9, No.1, pp.294-302,
+                            2013.
+                          </li>
 
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
-                            Gao. <a href="doc/paper/TIFS-2014.pdf">"An Efficient
+                            Gao.<br> <a href="doc/paper/TIFS-2014.pdf"><b>"An Efficient
                             and Improved Generic Framework for Three-Factor
                             Authentication with Provably Secure
-                            Instantiation"</a>, <i>IEEE Transactions on
+                            Instantiation"</a></b>. <br><i>IEEE Transactions on
                             Information Forensics and Security (TIFS)</i>
-                            (impact factor = 2.065, h5-index = 47), Vol.9, No.12
-                            , pp. 2302-2313, Dec. 2014. DOI: 10.1109/TIFS.2014.2362979
+                            (IF = 2.065, h5-index = 47), <br>Vol.9, No.12
+                            , pp. 2302-2313, 2014.
                           </li>
                           <li>
                             Jiangshan Yu, Vincent Cheval, and Mark
-                            Ryan. <!-- <a href="doc/paper/DTKI.pdf"> -->"DTKI:
+                            Ryan. <br><a href="doc/paper/DTKI.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
-                            trusted parties"<!-- </a> -->. <i> The computer
-                            Journal </i>,
-                            2016. (<!-- <a href="doc/paper/DTKI-report.pdf">Technical -->
+                            trusted parties"</b></a>. <br><i> The computer
+                            Journal </i> (IF = 1.041,
+                            h5-index = 26), <br>Vol. 59 No. 11,
+                            pp. 1695-1713,
+                            2016. (<!-- <a href="doc/paper/DTKI-report.pdf">Technical
+                            -->
                             <!-- Report</a> -->
                             <!-- and  --><a href="doc/paper/DTKI-proof.zip">
-                            Tamarin code</a>)
+                            Tamarin code</a>) 
                         </li>
 
 
@@ -354,19 +358,17 @@ Oct.2014
 	                    <li><b>Conference:</b><br>
 	                      <ul type="circle">
                           <li>Jiangshan Yu, Guilin Wang, and Yi
-                          Mu. <a href="doc/paper/TrustCom2012.pdf">"Provably
+                          Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably
                           Secure Single Sign-on Scheme in Distributed Systems
-                          and Networks"</a>. <i>IEEE TrustCom-2012</i>
-                          (acceptance rate: 100/358 = 28%),
-                          pp. 271-278. DOI:10.1109/TrustCom.2012.228</li>
+                          and Networks"</b></a>. <br><i>IEEE TrustCom</i>,
+                          pp. 271-278, 2012</li>
                           <li>Jiangshan Yu and Mark
-                          Ryan, <a href="doc/paper/SPW-2015.pdf">
+                          Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
                           "Device attacker models: fact and
-                          fiction"</a>, <i>Security Protocols
+                          fiction"</b></a>.<br> <i>Security Protocols
                               XXIII</i>, pp. 158-167, 2015.</li>
                           <li>
-                        Jiangshan Yu and Mark Ryan. "Evaluating public
-                        key infrastructures", <i>Software Architecture
+                        Jiangshan Yu and Mark Ryan.<br> <a href="doc/paper/PKI.pdf"><b>"Evaluating web PKIs"</b></a>.<br> <i>Software Architecture
                         for Big Data and the Cloud</i>, 2016. (To
                         appear as a book chapter)
                           </li>
@@ -388,22 +390,22 @@ Oct.2014
 	                    <li><b>Thesis:</b><br>
 	                      <ul type="circle">
                                 <li>Jiangshan
-                          Yu. <a href="doc/paper/Thesis.pdf">"Remote
+                          Yu.<br> <a href="doc/paper/Thesis.pdf"><b>"Remote
                           User Authentication in Distributed Networks
-                          and Systems"</a>. <i>Master of Computer
-                          Science (Research)</i>, School of Computer
-                          Science and Software Engineering, University
-                          of Wollongong, Australia, 2012. (Supervised
+                          and Systems"</a></b>. <br><i><b>Master of Research (MPhil)</b> in Computer Science
+                          (Network security and Cryptography)</i>.<br>  University of
+                          Wollongong, Australia, 2012. (Supervised
                           by <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
                           Wang</a>
                           and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
                           Mu</a>)</li>
                                 <li>Jiangshan
-                                  Yu. <a href="http://etheses.bham.ac.uk/6915/">"Mitigating
-                                  private key compromise"</a>. <i> PhD
-                                  </i>, School of Computer Science,
-                                  University of Birmingham, UK,
-                                  2016. (Supervised
+                                  Yu. <br> <a href="http://etheses.bham.ac.uk/6915/"><b>"Mitigating
+                                  private key
+                                  compromise"</b></a>. <br><i> <b>Doctor
+                                  of Philosophy (PhD)</b> in Computer Science (cyber security).
+                                  </i> <br> University of Birmingham,
+                                  UK, 2016. (Supervised
                                   by <a href="http://www.cs.bham.ac.uk/~mdr/">
                                   Prof. Mark Ryan</a>)</li>
                         </ul>
