--- a/index.html
+++ b/index.html
@@ -343,11 +343,10 @@ Oct.2014
                             Journal </i> (IF = 1.041,
                             h5-index = 26), <br>Vol. 59 No. 11,
                             pp. 1695-1713,
-                            2016. (<!-- <a href="doc/paper/DTKI-report.pdf">Technical
+                            2016. <!-- <a href="doc/paper/DTKI-report.pdf">Technical
                             -->
                             <!-- Report</a> -->
-                            <!-- and  --><a href="doc/paper/DTKI-proof.zip">
-                            Tamarin code</a>) 
+                            <!-- and  -->(<a href="doc/paper/DTKI-proof.zip">Tamarin code</a>) 
                         </li>
 
 
