--- a/index.html
+++ b/index.html
@@ -881,8 +881,9 @@ Oct.2014
                         6px"> <font size="5"><b>Trust and
                         Investment</b></font></p>
                       <p style="margin-left: 18vw; margin-bottom:
-                        6px"><a href="http://www.prccf.com">Jin Xin Tong Trust
-                        and Investment Corporation Ltd</a> is a Chinese
+                        6px"><a href="http://www.prccf.com"> Zhong
+                        Shang Chuang Fu
+                        </a> is a Chinese
                         financing and investment company, currently interested
                         in helping individual found a company and helping SMEs
                         make their business successful. If you or your company
