--- a/index.html
+++ b/index.html
@@ -132,13 +132,14 @@ Oct.2014
                                 <!-- of Wollongong</a>, Australia. -->
                                 <!-- <br><br> -->
 
-                                I am interested in designing secure
-                                systems. In particular, the focus of
-                                my research has been on applied
-                                crypto, secure authentication, key
-                                management, public key certificate
-                                security, email security, secure cloud
-                                storage, and security verification.
+                                I am interested in computer security
+                                and cryptography. In particular, the
+                                focus of my research has been on
+                                design and analysis of cryptographic
+                                protocols, cryptographic key
+                                management, secure authentication,
+                                post compromise security, and
+                                public-ledger-based applications.
                                 <br><br> Currently, I’m working on the
                                 public-ledger-based applications
                                 (e.g. crypto-currency and blockchain
