update adderss to luxembourg

--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ Oct.2014
 
                         <p><img style="width: 24px; height: 24px;
                         padding-left:1px" src="images/phone.png" alt="icon 1"
-                        /> +44 121-414-7969</p>
+                        /> +352 46 66 44 - 5984</p>
 
                         <p><img style="width: 27px; height: 27px;"
                         src="images/email.png" alt="icon
@@ -1250,9 +1250,13 @@ Oct.2014
                         /><a class="link_orange"
                         href="#"><span class="txt_black"><font size=3>www.jiangshanyu.com</font></span></a></p>
                         <p><img style="width: 22px; height: 22px;"
-                                src="images/location.png" alt="icon 4" /> Room
-                                125, School of Computer Science, University
-                                &nbsp &nbsp &nbsp &nbsp &nbsp  of Birmingham, UK.</p>                        	
+                                src="images/location.png" alt="icon 4"
+                                /> Room C024, Weicker Building,
+                                University of <br> &nbsp &nbsp &nbsp
+                          &nbsp Luxembourg, L-2721, Luxembourg.<br>
+			   &nbsp &nbsp &nbsp
+                          &nbsp (4, rue Alphonse Weicker L-2721 Luxembourg.)
+                         </p>
                     </div>
                     
                       <div class="container">
