minor on business

--- a/index.html
+++ b/index.html
@@ -816,15 +816,17 @@ Oct.2014
                         6px"> <font size="5"><b>Tech-Project</b></font></p>
 	                  <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
-	                    <li><p><b>ECT/ConfiMail</b></p> 
-                        <p>Enhanced certificate transparency (ECT) is a new
-                         public key infrastructure, it enables efficient
-                         certificate issuance and revocation management, and can
-                         detect misbehaviours from certificate authorities which
-                         is required to be trusted in the current PKI. It can be
-                         applied to all systems where public key cryptography is
-                         used.</p>
-                        <p>One interesting application of ECT is an easy-to-use
+	                    <li><p><b>CIRT/ConfiMail</b></p> 
+                        <p>Certificate Issuance and Revocation
+                         Transparency (CIRT) is a new public key
+                         infrastructure, it enables efficient
+                         certificate issuance and revocation
+                         management, and can detect misbehaviours from
+                         certificate authorities which is required to
+                         be trusted in the current PKI. It can be
+                         applied to all systems where public key
+                         cryptography is used.</p>
+                        <p>One interesting application of CIRT is an easy-to-use
                          and end-to-end encrypted email system, called
                          "ConfiMail".  Public-key cryptography was invented to
                          allow users to send encrypted mail; nevertheless, 35
@@ -875,51 +877,51 @@ Oct.2014
                         systems where a key escrew authority exists, this
                         product can detect if the secret key is abused.</p>
                         </li>
-                      <br>
+                      <!-- <br> -->
                       </ul>
 
-                     <p style="margin-left: 18vw; margin-bottom:
-                        6px"> <font size="5"><b>Trust and
-                        Investment</b></font></p>
-                      <p style="margin-left: 18vw; margin-bottom:
-                        6px"><a href="http://www.prccf.com"> Zhong
-                        Shang Chuang Fu
-                        </a> is a Chinese
-                        financing and investment company, currently interested
-                        in helping individual found a company and helping SMEs
-                        make their business successful. If you or your company
-                        has an idea which can be transferred to products that
-                        has a big market in China, then we can help you found
-                        and/or accelerate your company by providing a variety of
-                        supports such as fund support, management support, and
-                        marketing support.</p>
-                    <br>
+                    <!--  <p style="margin-left: 18vw; margin-bottom: -->
+                    <!--     6px"> <font size="5"><b>Trust and -->
+                    <!--     Investment</b></font></p> -->
+                    <!--   <p style="margin-left: 18vw; margin-bottom: -->
+                    <!--     6px"><a href="http://www.prccf.com"> Zhong -->
+                    <!--     Shang Chuang Fu -->
+                    <!--     </a> is a Chinese -->
+                    <!--     financing and investment company, currently interested -->
+                    <!--     in helping individual found a company and helping SMEs -->
+                    <!--     make their business successful. If you or your company -->
+                    <!--     has an idea which can be transferred to products that -->
+                    <!--     has a big market in China, then we can help you found -->
+                    <!--     and/or accelerate your company by providing a variety of -->
+                    <!--     supports such as fund support, management support, and -->
+                    <!--     marketing support.</p> -->
+                    <!-- <br> -->
 
-                    <p style="margin-left: 18vw; margin-bottom: 6px"> <font size="5"><b>Plant,
-                        Land and Mine</b></font></p> 
-                    <p style="margin-left: 18vw; margin-bottom: 6px"> <i>Dong
-                        Jing Ling Cement Plant</i> was built in 1986 in Liao
-                        Ning, China. The structure of flow-sheet and equipment
-                        of the production process have been falling behind. It
-                        is looking for technologies and potential cooperation
-                        opportunities that could be used for an industrial
-                        revolution to reduce the pollution and to protect the
-                        environment. The plant has the following resources, and
-                        could make change of its main product (cement) to any
-                        other possible environmental friendly products. It has
-                        hydroelectric power for industrial purpose and
-                        convenient transportation to railway, sea port, and
-                        airport.</p>
+                   <!--  <p style="margin-left: 18vw; margin-bottom: 6px"> <font size="5"><b>Plant, -->
+                   <!--      Land and Mine</b></font></p>  -->
+                   <!--  <p style="margin-left: 18vw; margin-bottom: 6px"> <i>Dong -->
+                   <!--      Jing Ling Cement Plant</i> was built in 1986 in Liao -->
+                   <!--      Ning, China. The structure of flow-sheet and equipment -->
+                   <!--      of the production process have been falling behind. It -->
+                   <!--      is looking for technologies and potential cooperation -->
+                   <!--      opportunities that could be used for an industrial -->
+                   <!--      revolution to reduce the pollution and to protect the -->
+                   <!--      environment. The plant has the following resources, and -->
+                   <!--      could make change of its main product (cement) to any -->
+                   <!--      other possible environmental friendly products. It has -->
+                   <!--      hydroelectric power for industrial purpose and -->
+                   <!--      convenient transportation to railway, sea port, and -->
+                   <!--      airport.</p> -->
 
-                   <ul type="square"; style="margin-left: 18vw; margin-bottom:
-                              6px">
-                      <li>Location: Liao Ning, China.</li>
-                      <li>Area: 32,000 m<sup>2</sup>, can be extended to
-                      50,000m<sup>2</sup></li>
-                      <li>Gross leasable area (GLA): 6670 m<sup>2</sup>.</li>  
-                      <li>limestone: 90,000,000 m<sup>3</sup> (approximately 240
-                      million tonne)</li>
-                   </ul>
+                   <!-- <ul type="square"; style="margin-left: 18vw; margin-bottom: -->
+                   <!--            6px"> -->
+                   <!--    <li>Location: Liao Ning, China.</li> -->
+                   <!--    <li>Area: 32,000 m<sup>2</sup>, can be extended to -->
+                   <!--    50,000m<sup>2</sup></li> -->
+                   <!--    <li>Gross leasable area (GLA): 6670 m<sup>2</sup>.</li>   -->
+                   <!--    <li>limestone: 90,000,000 m<sup>3</sup> (approximately 240 -->
+                   <!--    million tonne)</li> -->
+                   <!-- </ul> -->
                   </font>
                 </div>
             </div>
