--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@ Oct.2014
                                 <!-- of Wollongong</a>, Australia. -->
                                 <!-- <br><br> -->
 
-                                I am interested in computer security
-                                and cryptography. In particular, the
-                                focus of my research has been on
-                                design and analysis of cryptographic
-                                protocols, cryptographic key
-                                management, secure authentication,
-                                post compromise security, and
-                                public-ledger-based applications.
+                                I am interested in cyber security and
+                                cryptography. In particular, the focus
+                                of my research has been on design and
+                                analysis of cryptographic protocols,
+                                cryptographic key management, secure
+                                authentication, post compromise
+                                security, and public-ledger-based
+                                applications.
                                 <br><br> Currently, I’m working on the
                                 public-ledger-based applications
                                 (e.g. crypto-currency and blockchain
@@ -305,6 +305,56 @@ Oct.2014
 
                             <br><br>
 
+
+                          <p style="margin-left: 18vw; margin-bottom:
+                              6px"><font size="5"><b>Grant: </b></font></p>
+	                  <ul type="circle"; style="margin-left: 18vw; margin-bottom:
+                                                    6px">
+	                        <li>
+                                  "Technology inspired feasibility
+                                  study for secure email and cloud
+                                  storage", GBP33,000
+                                  from Technology Strategy Board
+                                  (Innovate UK), 2015.
+                                </li>
+                              </li>
+</ul>
+<br>
+                          <p style="margin-left: 18vw; margin-bottom:
+                              6px"><font size="5"><b>Selected projects: </b></font></p>
+
+
+	                  <ul type="circle"; style="margin-left: 18vw; margin-bottom:
+                                                    6px">
+                            <li>
+                              Co-Designer. Huawei SoC Secure Boot
+                              Solution, UK. September - December,
+                              2016. (Funded by Huawei Ltd.)
+                            </li>
+                            <!-- <li> -->
+                            <!--   Investigator, Analysis on Bitcoin and -->
+                            <!--   BFT systems, UK, October - November -->
+                            <!--   2016. (Funded by CritiX, SnT, University -->
+                            <!--   of Luxembourg.) -->
+                            <!-- </li> -->
+                            <!-- <li> -->
+                            <!--   On the nature and security of the -->
+                            <!--   Internet of Things, June - July, -->
+                            <!--   UK. (Funded by Law school, University of -->
+                            <!--   Birmingham.) -->
+                            <!--   </li> -->
+
+	                        <li>
+                                  Co-leader, Innovate UK
+                                  project on user-friendly security
+                                  and privacy to increase confidence
+                                  in cloud-based systems, UK. June -
+                                  September, 2015. (Funded by
+                                  InnovateUK.)
+                                </li>
+                              </li>
+</ul>
+<br>
                     <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b>Publications and
                               Manuscripts: </b></font><br>
@@ -319,30 +369,30 @@ Oct.2014
                         <ul type="circle">
                           <li>Guilin Wang, Jiangshan Yu, Qi
                           Xie. <br><a href="doc/paper/TII-2013.pdf"><b>"Security
-                          Analysis of A Single Sign-On Mechanism for Distributed
-                          Computer Networks"</a></b>.<br> <i>IEEE Transactions on
-                          Industrial Informatics</i> (IF = 8.785,
-                          h5-index = 46), <br>Vol.9, No.1, pp.294-302,
-                            2013.
+                          Analysis of A Single Sign-On Mechanism for
+                          Distributed Computer
+                          Networks"</a></b>.<br> <i>IEEE Transactions
+                          on Industrial Informatics</i>, Vol.9, No.1,
+                          pp.294-302, 2013.
                           </li>
 
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
-                            Gao.<br> <a href="doc/paper/TIFS-2014.pdf"><b>"An Efficient
-                            and Improved Generic Framework for Three-Factor
-                            Authentication with Provably Secure
-                            Instantiation"</a></b>. <br><i>IEEE Transactions on
-                            Information Forensics and Security (TIFS)</i>
-                            (IF = 2.065, h5-index = 47), <br>Vol.9, No.12
-                            , pp. 2302-2313, 2014.
+                            Gao.<br> <a href="doc/paper/TIFS-2014.pdf"><b>"An
+                            Efficient and Improved Generic Framework
+                            for Three-Factor Authentication with
+                            Provably Secure
+                            Instantiation"</a></b>. <br><i>IEEE
+                            Transactions on Information Forensics and
+                            Security (TIFS)</i>, Vol.9, No.12 ,
+                            pp. 2302-2313, 2014.
                           </li>
                           <li>
                             Jiangshan Yu, Vincent Cheval, and Mark
                             Ryan. <br><a href="doc/paper/DTKI.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
-                            trusted parties"</b></a>. <br><i> The computer
-                            Journal </i> (IF = 1.041,
-                            h5-index = 26), <br>Vol. 59 No. 11,
+                            trusted parties"</b></a>. <br><i> The
+                            computer Journal </i>, Vol. 59 No. 11,
                             pp. 1695-1713,
                             2016. <!-- <a href="doc/paper/DTKI-report.pdf">Technical
                             -->
@@ -517,7 +567,8 @@ Oct.2014
                              </p>
                              <p>
                                <a href="http://www.ics.forth.gr/esorics2016/">ESORICS 2016</a>;
-                               <a href="http://www.wistp.org/">WISTP 2016</a>.
+                               <a href="http://www.wistp.org/">WISTP 2016</a>;
+                               <a href="http://eurosys2017.org">EuroSys 2017</a>.
                              </p>
                            </i>                          
 	                        <br>
@@ -589,17 +640,7 @@ Oct.2014
                               6px"><font size="5"><b>Honors and Awards: </b></font></p>
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                                                   6px">
-                            <li><b>Funding:</b><br>
-	                      <ul type="circle">
-	                        <li>
-                                  "Technology inspired feasibility
-                                  study for secure email and cloud
-                                  storage", GBP33,000
-                                  from Technology Strategy Board
-                                  (Innovate UK), 2015.
-                                </li>
-                              </ul>
-                              </li>
+
 	                    <li><b>Scholarships:</b><br>
 	                      <ul type="circle">
 	                        <li> Universitas 21 scholarship from
