--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- 
 Jiangshan Yu
-Oct.2014
+Oct.2014.
+Last update: Jan 2017
 -->
 <html lang="en">
     <head>
@@ -1247,6 +1248,7 @@ Oct.2014
                     </div>
 
                     <div class="col-md-8">
+                      <!-- Load google map from js/templatemo_script.js -->
                         <div class="templatemo-contact-map" id="map-canvas"> </div>  
                         <div class="clearfix"></div>
                     </div>
@@ -1295,12 +1297,12 @@ Oct.2014
                         href="#"><span class="txt_black"><font size=3>www.jiangshanyu.com</font></span></a></p>
                         <p><img style="width: 22px; height: 22px;"
                                 src="images/location.png" alt="icon 4"
-                                /> Room C024, Weicker Building,
-                                University of <br> &nbsp &nbsp &nbsp
-                          &nbsp Luxembourg, L-2721, Luxembourg.<br>
-			   &nbsp &nbsp &nbsp
-                          &nbsp (4, rue Alphonse Weicker L-2721 Luxembourg.)
-                         </p>
+                                /> MNO (Building), E02 0245-280
+                                (room), <br> &nbsp &nbsp &nbsp &nbsp
+                                Université du Luxembourg <br> &nbsp
+                                &nbsp &nbsp &nbsp 2, Avenue de
+                                l'Université L-4365
+                                Esch-sur-Alzette.  </p>
                     </div>
                     
                       <div class="container">
