--- a/index.html
+++ b/index.html
@@ -1297,12 +1297,14 @@ Last update: Jan 2017
                         href="#"><span class="txt_black"><font size=3>www.jiangshanyu.com</font></span></a></p>
                         <p><img style="width: 22px; height: 22px;"
                                 src="images/location.png" alt="icon 4"
-                                /> MNO (Building), E02 0245-280
+                                /> Maison du Nombre (Building), <br>
+                                &nbsp &nbsp &nbsp &nbsp E02 0245-280
                                 (room), <br> &nbsp &nbsp &nbsp &nbsp
-                                Université du Luxembourg <br> &nbsp
-                                &nbsp &nbsp &nbsp 2, Avenue de
-                                l'Université L-4365
-                                Esch-sur-Alzette.  </p>
+                                University of Luxembourg, <br> &nbsp
+                                &nbsp &nbsp &nbsp 2 Avenue de
+                                l'Université, L-4365,<br> &nbsp &nbsp
+                                &nbsp &nbsp
+                                Esch-sur-Alzette, Luxembourg.  </p>
                     </div>
                     
                       <div class="container">
