--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ Last update: Jan 2017
                                 security, and public-ledger-based
                                 applications.
                                 <br><br> Currently, I’m working on the
-                                public-ledger-based applications
+                               <font  style="color: red">
+                                public-ledger-based applications </font>
                                 (e.g. crypto-currency and blockchain
                                 technology), IoT security (e.g. key
                                 management, device authentication, and
@@ -150,7 +151,22 @@ Last update: Jan 2017
                                 compromise security (e.g. detecting
                                 the compromise of secret keys and
                                 devices).
-                                <br><br>
+                               <br>
+                               <br>
+                               --------------------------<br>
+                               <i> "I believe the public ledger is
+                                 going to be as beautiful and as
+                                 useful as any physical infrastructure
+                                 that we have created and I really
+                                 urge you to devote all of your
+                                 attention to
+                                 it!" </i><br>
+                                <p style="margin-left:60em">
+                               ---
+                                 Prof. Silvio Micali, Turing Award
+                               winner (2012)</p>
+                                <p style="margin-left:26em">
+                                --------------------------<br></p>
                               </font>
                             </p>
                           </div>
