--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@ Last update: Jan 2017
                                  urge you to devote all of your
                                  attention to
                                  it!" </i><br>
-                                <p style="margin-left:60em">
+                                <font style="margin-left:60em">
                                ---
                                  Prof. Silvio Micali, Turing Award
-                               winner (2012)</p>
-                                <p style="margin-left:26em">
+                               winner (2012)</font><br><br>
+                               
                                 --------------------------<br></p>
                               </font>
                             </p>
