--- a/index.html
+++ b/index.html
@@ -160,11 +160,9 @@ Last update: Jan 2017
                                  that we have created and I really
                                  urge you to devote all of your
                                  attention to
-                                 it!" </i><br>
-                                <font style="margin-left:60em">
-                               ---
-                                 Prof. Silvio Micali, Turing Award
-                               winner (2012)</font><br><br>
+                                 it!" </i><br><br>
+                                 --- Prof. Silvio Micali, Turing Award
+                                 winner (2012)<br><br>
                                
                                 --------------------------<br></p>
                               </font>
